# mathproject

./: .astylerc  .gitignore  CMakeLists.txt  mathproject.pro
ide/: hemsyntaxhighlighter.cpp  hemsyntaxhighlighter.h  icons.qrc  ide.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  userInterface.glade
ide/po/: LINGUAS
ide/replwidget/: replwidget.cpp  replwidget.h  replwidget.pri
interpreter/: AST.cpp  AST.h  Token.h  bison.pri  flex.pri  interpreter.pro  main.cpp
interpreter/grammar/: mp.l  mp.y
kernel/: AST.cpp  AST.h  Array.cpp  Array.h  BuiltinFunctions.cpp  BuiltinFunctions.h  Error.cpp  Error.h  Function.cpp  Function.h  Matrix.cpp  Matrix.h  NullType.cpp  NullType.h  ReferenceType.cpp  ReferenceType.h  String.cpp  String.h  StringType.cpp  StringType.h  Type.cpp  Type.h  UserFunction.cpp  UserFunction.h  kernel.pro  placeholder.cpp
plotter/: mainwindow.cpp  mainwindow.ui  plotter.pro
